Google OAuth client

--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,1 +1,7 @@
-<router-outlet></router-outlet>
+<div class="content">
+    <app-navbar></app-navbar>
+    <div class="router">
+        <router-outlet></router-outlet>    
+    </div>
+    <app-copyright-bar></app-copyright-bar>
+</div>
