--- a/frontend/src/app/pages/homepage/homepage.component.html
+++ b/frontend/src/app/pages/homepage/homepage.component.html
@@ -1,1 +1,16 @@
-<p>homepage works!</p>
+<div class="content">
+    <h1 class="milky">I Have Anxiety, Make Calls For Me</h1>
+    <p>
+        Are you an introvert? Need to make an appointment? Sure you do! Use my website please.
+    </p>
+    <p>
+        Pay a stranger to take care of your pesky human interactions.
+    </p>
+    <p>
+        Maybe it's the collapse of society, but if I need to make another haircut appointment I'm going to cry.
+    </p>
+    <p>
+        Log in to get started!
+    </p>
+    <app-log-in-out-button></app-log-in-out-button>
+</div>
