--- a/frontend/src/app/pages/homepage/homepage.component.html
+++ b/frontend/src/app/pages/homepage/homepage.component.html
@@ -4,7 +4,7 @@
         Are you an introvert? Need to make an appointment? Sure you do! Use my website please.
     </p>
     <p>
-        Pay a stranger to take care of your pesky human interactions.
+        Ask a stranger to take care of your pesky human interactions.
     </p>
     <p>
         Maybe it's the collapse of society, but if I need to make another haircut appointment I'm going to cry.
