--- a/frontend/src/app/widgets/navbar/navbar.component.html
+++ b/frontend/src/app/widgets/navbar/navbar.component.html
@@ -2,4 +2,7 @@
 <span *ngIf="user.loggedIn" routerLink="/forum">
     Forum
 </span>
+<span *ngIf="user.loggedIn" routerLink="/messages">
+    Messages
+</span>
 <app-log-in-out-button></app-log-in-out-button>
