--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -34,6 +34,7 @@ input, textarea {
 
 body {
     background-image: linear-gradient(-15deg, var(--light-purple), var(--pink));
+    background-color: var(--pink);
 }
 
 p {
